# simple-rust-image-resizer

./: Cargo.toml  LICENSE  README.md
src/: main.rs
